// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Parsing can handle something more complicated 1`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "Special characters ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "~",
      },
    ],
    "type": "verbatim",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " and ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "!",
      },
    ],
    "type": "verbatim",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ". Also ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "~/.this/path",
      },
    ],
    "type": "verbatim",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " and ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "that",
      },
    ],
    "type": "code",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " thing.",
  },
]
`;

exports[`Inline Parsing recon emphasises at different locations 1`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "one ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "two",
      },
    ],
    "type": "bold",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " three",
  },
]
`;

exports[`Inline Parsing recon emphasises at different locations 2`] = `
Array [
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "one",
      },
    ],
    "type": "bold",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " two three",
  },
]
`;

exports[`Inline Parsing recon emphasises at different locations 3`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "one two ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "three",
      },
    ],
    "type": "bold",
  },
]
`;

exports[`Inline Parsing recon emphasises with 2 chars 1`] = `
Array [
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "12",
      },
    ],
    "type": "bold",
  },
]
`;

exports[`Inline Parsing recon emphasises with 2 chars 2`] = `
Array [
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "1",
      },
    ],
    "type": "bold",
  },
]
`;

exports[`Inline Parsing recon footnote reference 1`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "hello",
  },
  Node {
    "children": Array [],
    "label": "1",
    "type": "footnote.reference",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " world.",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 1`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*,word*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 2`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*word,*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 3`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*'word*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 4`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*word'*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 5`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*\\"word*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 6`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*word\\"*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 7`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "* word*",
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 8`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "*word *",
  },
]
`;

exports[`Inline Parsing recon link 1`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "hello ",
  },
  Node {
    "children": Array [],
    "desc": undefined,
    "type": "link",
    "uri": Object {
      "location": "./image/logo.png",
      "protocol": "file",
      "raw": "./image/logo.png",
    },
  },
]
`;

exports[`Inline Parsing recon link 2`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "hello ",
  },
  Node {
    "children": Array [],
    "desc": "link",
    "type": "link",
    "uri": Object {
      "location": "Internal Link",
      "protocol": "internal",
      "raw": "Internal Link",
    },
  },
]
`;

exports[`Inline Parsing recon link 3`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "hello ",
  },
  Node {
    "children": Array [],
    "desc": "logo",
    "type": "link",
    "uri": Object {
      "location": "../image/logo.png",
      "protocol": "file",
      "raw": "../image/logo.png",
    },
  },
]
`;

exports[`Inline Parsing recon mixed emphasis 1`] = `
Array [
  Node {
    "children": Array [],
    "desc": "Here's",
    "type": "link",
    "uri": Object {
      "location": "//github.com/xiaoxinghu/orgajs",
      "protocol": "https",
      "raw": "https://github.com/xiaoxinghu/orgajs",
    },
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " to the ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "crazy",
      },
    ],
    "type": "bold",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " ones, the ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "misfits",
      },
    ],
    "type": "italic",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ", the ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "rebels",
      },
    ],
    "type": "underline",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ", the ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "troublemakers",
      },
    ],
    "type": "code",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ", the round pegs in the ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "round",
      },
    ],
    "type": "strikeThrough",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": " square holes...",
  },
]
`;

exports[`Inline Parsing recon single emphasis 1`] = `
Array [
  Node {
    "children": Array [],
    "type": "text",
    "value": "hello ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "world",
      },
    ],
    "type": "bold",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ", welcome to ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "org-mode",
      },
    ],
    "type": "bold",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ". Have a nice ",
  },
  Node {
    "children": Array [
      Node {
        "children": Array [],
        "parent": [Circular],
        "type": "text",
        "value": "day",
      },
    ],
    "type": "bold",
  },
  Node {
    "children": Array [],
    "type": "text",
    "value": ".",
  },
]
`;
